--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -23,17 +23,30 @@ summary: 'I am a passionate electrical engineer with 2 years of professional exp
 # your social links
 # give as many as you want. use font-awesome for the icons.
 socialLinks:
-- name: Github
-  icon: "fab fa-github"
-  url: "https://www.github.com/example"
+- name: LinkedIn
+  icon: "fab fa-linkedin"
+  url: "https://www.linkedin.com/in/jhakunal"
 
 # your soft skills
 # give the percentage between 50 to 100 with 5 intervals.
 # currently supported colors: blue, yellow, pink, green, sky, orange
 softSkills:
 - name: Leadership
-  percentage: 85
+  percentage: 100
   color: blue
 - name: Team Work
-  percentage: 90
+  percentage: 100
   color: yellow
+- name: Adaptability
+  percentage: 100
+  color: green
+- name: Collaboration
+  percentage: 100
+  color: orange
+- name: Creativity
+  percentage: 100
+  color: sky
+- name: Communication
+  percentage: 100
+  color: pink
+
