--- a/data/en/sections/projects.yaml
+++ b/data/en/sections/projects.yaml
@@ -16,33 +16,31 @@ buttons:
   filter: "professional"
 - name: Academic
   filter: "academic"
-- name: Hobby
-  filter: "hobby"
 
 # your projects
 projects:
-- name: Kubernetes
-  logo: /images/sections/projects/kubernetes.png
-  role: Contributor
-  timeline: "March 2018 - Present"
-  repo: https://github.com/kubernetes/kubernetes # If your project is a public repo on GitHub, then provide this link. it will show star count.
-  #url: ""  # If your project is not a public repo but it has a website or any external details url then provide it here. don't provide "repo" and "url" simultaneously.
-  summary: Production-Grade Container Scheduling and Management.
-  tags: ["professional", "kubernetes", "cloud"]
-
-- name: Tensorflow
-  logo: /images/sections/projects/tensorflow.png
-  role: Developer
-  timeline: "Jun 2018 - Present"
-  repo: https://github.com/tensorflow/tensorflow
-  #url: ""
-  summary: An Open Source Machine Learning Framework for Everyone.
-  tags: ["professional", "machine-learning","academic"]
-
-- name: Toha
-  logo: /images/sections/projects/toha.png
+- name: New Product Innovation
+  # logo: /images/sections/projects/kubernetes.png
   role: Owner
-  timeline: "Jun 2019 - Present"
-  repo: https://github.com/hossainemruz/toha
-  summary: A Hugo theme for personal portfolio.
-  tags: ["hobby","hugo","theme","professional"]
+  timeline: "April 2020 - Present"
+  # repo: https://github.com/kubernetes/kubernetes # If your project is a public repo on GitHub, then provide this link. it will show star count.
+  #url: ""  # If your project is not a public repo but it has a website or any external details url then provide it here. don't provide "repo" and "url" simultaneously.
+  summary: Testing new products in various DC-DC Converters to compare their thermal and electrical performance against existing products. Working with New Product Definition and Marketing teams to find areas of improvement and make the required design changes.
+  tags: ["professional"]
+
+- name: Series-Sync Buck Converter for High-Power Solar Applications
+  # logo: /images/sections/projects/tensorflow.png
+  role: Owner
+  timeline: "Mar 2021"
+  # repo: https://github.com/tensorflow/tensorflow
+  #url: ""
+  summary: Designed a series synchronous-buck converter with 12 MOSFETs to replicate Multi-Level inverter operation for reducing testing time and effort for solar applications. Successfully conducted thermal and waveform analysis of MOSFETs to determine if MOSFETs are fit for use in the application.
+  tags: ["professional"]
+
+- name: Control of Induction Motor in an EV Propulsion Drive
+  # logo: /images/sections/projects/toha.png
+  role: Owner
+  timeline: "Nov 2018"
+  # repo: https://github.com/hossainemruz/toha
+  summary: Developed a vehicle road model and an induction machine model for an EV in rotor flux reference frame to implement instantaneous torque control with a speed controller in indirect rotor flux orientation system. The vehicle model successfully followed the speed command given to the controller with minimal delay in the system.
+  tags: ["academic"]
