--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -8,7 +8,7 @@ section:
   template: sections/about.html
 
 # your designation
-designation: Senior Staff Application Engineer
+designation: Senior Staff Applications Engineer
 # your company information
 company:
   name: Infineon Technologies
