--- a/data/en/sections/education.yaml
+++ b/data/en/sections/education.yaml
@@ -13,7 +13,7 @@ degrees:
   icon: fa-graduation-cap
   timeframe: 2017 - 2019
   institution:
-    name: North Carolina State Univeristy
+    name: North Carolina State University
     url: "https://www.ncsu.edu"
   grade:
     scale: CGPA
