--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -15,7 +15,7 @@ company:
   url: "https://www.infineon.com"
 
 # your resume. this file path should be relative to you "static" directory
-resume: "files/resume.pdf"
+resume: "files/Kunal_Jha_Resume.pdf"
 
 # a summary about you
 summary: 'I am a passionate electrical engineer with 2 years of professional experience.'
