--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 baseURL: https://www.kunaljha.net
 
 languageCode: en-us
-title: "Kunal Jha"
+title: "Himangshu Shekhar Jha"
 # theme: "toha"
 
 # Manage languages
