--- a/data/en/site.yaml
+++ b/data/en/site.yaml
@@ -1,5 +1,5 @@
 # Copyright Notice
-copyright: © Kunal Jha 2021. Creative Commons Attribution-ShareAlike 4.0 International License.
+copyright: © Himangshu Shekhar Jha 2021. Creative Commons Attribution-ShareAlike 4.0 International License.
 
 # Meta description for your site.  This will help the search engines to find your site.
-description: Personal website of Kunal Jha.
+description: Personal website of Himangshu Shekhar Jha.
