--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -1,16 +1,16 @@
 # some information about you
-name: "Kunal Jha"
-nickname: "Kunal"
+name: "Himangshu Shekhar Jha"
+nickname: "Himangshu"
 # greeting message before your name. it will default to "Hi! I am" if not provided
 greeting: "Hi, I am"
-image: "images/kunal.jpeg"
+image: "images/shekhar.png"
 # give your some contact information. they will be used in the footer
 contactInfo:
-  email: "kunajha110@gmail.com"
+  email: "himangshushekharjha@gmail.com"
   # phone: ""
 
 # some summary about what you do
 summary:
-  - I am an Electrical Engineer
-  - I specialize in Power Electronics
-  - I am based in Los Angeles
+  - I am a Computer Science Student
+  # - I specialize in Power Electronics
+  - I am based in Bangalore, India
