--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -11,6 +11,6 @@ contactInfo:
 
 # some summary about what you do
 summary:
-  - I am a Computer Science Student
+  - I am a full-stack developer
   # - I specialize in Power Electronics
-  - I am based in Bangalore, India
+  - I am currently based in Bangalore, India
