--- a/data/en/sections/skills.yaml
+++ b/data/en/sections/skills.yaml
@@ -11,91 +11,91 @@ section:
 # Your Skills.
 # Give a summary of you each skill in the summary section.
 skills:
-- name: PLECS
+- name: C++
   # icon: "/images/sections/skills/kubernetes.png"
-  summary: "Designing and running various power converters for Electrical and Thermal Simulations."
+  # summary: "Designing and running various power converters for Electrical and Thermal Simulations."
   # url: "https://kubernetes.io/"
 
-- name: SIMetrix
+- name: JavaScript
   # icon: "/images/sections/skills/go.png"
-  summary: "Simulating MOSFETs to determine their switching performance and calculate power loss"
+  # summary: "Simulating MOSFETs to determine their switching performance and calculate power loss"
   # url: "https://golang.org/"
 
-- name: Altium
+- name: Java
   # icon: "/images/sections/skills/cloud.png"
-  summary: "Designing and implementing PCB layouts for various DC-DC and 3-phase converters to optimize the MOSFET electrical and thermal performance"
-
-- name: MATLAB Simulink
-  # icon: "/images/sections/skills/go.png"
-  summary: "Simulating control algorithms to control MOSFET switching using PI controllers for speed and torque control"
-  # url: "https://golang.org/"
-
-- name: Sauna
-  # icon: "/images/sections/skills/go.png"
-  summary: "Designing the MOSFET model to simulate and understand its thermal dissipation capabilities"
-  # url: "https://golang.org/"
-
-- name: WaveStudio
-  # icon: "/images/sections/skills/go.png"
-  summary: "Analyzing waveforms from the oscilloscope to calculate various parameters for MOSFET switching performance comparison"
-  # url: "https://golang.org/"
-
-- name: COMSOL
-  # icon: "/images/sections/skills/go.png"
-  summary: "Modelling DC-DC converters to simulate their thermal and magnetic performance"
-  # url: "https://golang.org/"
-
-- name: Cadence Allegro
-  # icon: "/images/sections/skills/go.png"
-  summary: "Designing and implementing PCB layouts for various DC-DC and 3-phase converters to optimize the MOSFET electrical and thermal performance"
-  # url: "https://golang.org/"
-
-- name: MATLAB
-  # icon: "/images/sections/skills/go.png"
-  summary: "Writing programs to implement control algorithms and calculate power loss for DC-DC converters"
-  # url: "https://golang.org/"
+  # summary: "Designing and implementing PCB layouts for various DC-DC and 3-phase converters to optimize the MOSFET electrical and thermal performance"
 
 - name: Python
   # icon: "/images/sections/skills/go.png"
-  summary: "Writing scripts to automate lab equipment for data collection"
+  # summary: "Simulating control algorithms to control MOSFET switching using PI controllers for speed and torque control"
   # url: "https://golang.org/"
 
-- name: Verilog
+- name: SQL
   # icon: "/images/sections/skills/go.png"
-  summary: "Writing programs to model various flip-flops and generate PWM control signals for gate-drivers"
+  # summary: "Designing the MOSFET model to simulate and understand its thermal dissipation capabilities"
   # url: "https://golang.org/"
 
-- name: C
+- name: Node.js
   # icon: "/images/sections/skills/go.png"
-  summary: "Writing programs for low-level programmming"
+  # summary: "Analyzing waveforms from the oscilloscope to calculate various parameters for MOSFET switching performance comparison"
   # url: "https://golang.org/"
 
-- name: 4-Ch & 8-Ch Oscilloscopes
+- name: Express
   # icon: "/images/sections/skills/go.png"
-  summary: "Using Oscilloscopes to monitor the voltage and current waveforms for lab tests and evaluate MOSFET performance"
+  # summary: "Modelling DC-DC converters to simulate their thermal and magnetic performance"
   # url: "https://golang.org/"
 
-- name: Power Supplies
+- name: Vue.js
   # icon: "/images/sections/skills/go.png"
-  summary: "Operating Power Supplies for lab tests from 0 - 300V input and upto 7kW power"
+  # summary: "Designing and implementing PCB layouts for various DC-DC and 3-phase converters to optimize the MOSFET electrical and thermal performance"
   # url: "https://golang.org/"
 
-- name: Programmable DC Loads
+- name: Cheerio.js
   # icon: "/images/sections/skills/go.png"
-  summary: "Using programmable DC loads to conduct lab tests in Constant Voltage, Constant Current, Constant Resistance modes, Pulsed Current Testing upto 450A"
+  # summary: "Writing programs to implement control algorithms and calculate power loss for DC-DC converters"
   # url: "https://golang.org/"
 
-- name: Signal Generators
+- name: Bootstrap
   # icon: "/images/sections/skills/go.png"
-  summary: "Working with Signal Generators to generate pulses for gate-drive signals up to 200 kHz with variable duty cycles"
+  # summary: "Writing scripts to automate lab equipment for data collection"
   # url: "https://golang.org/"
 
-- name: Digital Multimeters
+- name: Electron
   # icon: "/images/sections/skills/go.png"
-  summary: "Using digital multimeters to measure resistance, diode voltage, capacitance and voltage drop in the power converter"
+  # summary: "Writing programs to model various flip-flops and generate PWM control signals for gate-drivers"
   # url: "https://golang.org/"
 
-- name: Soldering
+- name: Keras
   # icon: "/images/sections/skills/go.png"
-  summary: "Working with soldering iron to solder various components on the PCB"
+  # summary: "Writing programs for low-level programmming"
+  # url: "https://golang.org/"
+
+- name: PyTorch
+  # icon: "/images/sections/skills/go.png"
+  # summary: "Using Oscilloscopes to monitor the voltage and current waveforms for lab tests and evaluate MOSFET performance"
+  # url: "https://golang.org/"
+
+- name: TensorFlow
+  # icon: "/images/sections/skills/go.png"
+  # summary: "Operating Power Supplies for lab tests from 0 - 300V input and upto 7kW power"
+  # url: "https://golang.org/"
+
+- name: MongoDB
+  # icon: "/images/sections/skills/go.png"
+  # summary: "Using programmable DC loads to conduct lab tests in Constant Voltage, Constant Current, Constant Resistance modes, Pulsed Current Testing upto 450A"
+  # url: "https://golang.org/"
+
+- name: MySQL
+  # icon: "/images/sections/skills/go.png"
+  # summary: "Working with Signal Generators to generate pulses for gate-drive signals up to 200 kHz with variable duty cycles"
+  # url: "https://golang.org/"
+
+- name: PostgreSQL
+  # icon: "/images/sections/skills/go.png"
+  # summary: "Working with Signal Generators to generate pulses for gate-drive signals up to 200 kHz with variable duty cycles"
+  # url: "https://golang.org/"
+
+- name: MariaDB
+  # icon: "/images/sections/skills/go.png"
+  # summary: "Using digital multimeters to measure resistance, diode voltage, capacitance and voltage drop in the power converter"
   # url: "https://golang.org/"
