--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,3 @@
-baseURL = "http://example.org/"
+baseURL = "https://himangshushekharjha.com/"
 languageCode = "en-us"
 title = "Himangshu Shekhar Jha"
