Updated profile informations

--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -12,5 +12,6 @@ contactInfo:
 # some summary about what you do
 summary:
   - I am a full-stack developer
-  # - I specialize in Power Electronics
+  - I am a competitive programmer
+  - I am a chess player
   - I am currently based in Bangalore, India
