--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -18,7 +18,7 @@ company:
 resume: "files/resume.pdf"
 
 # a summary about you
-summary: 'I am a passionate electrical engineer with 2 years of professional experience.'
+summary: 'I am a passionate computer science engineer with immense love in exploring the various domains in the stream and use my expertise and knowledge to build innovative and useful solutions.'
 # give as many as you want. use font-awesome for the icons.
 socialLinks:
 - name: LinkedIn
