added recent resume

--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -15,7 +15,7 @@ company:
   url: "http://www.msrit.edu/"
 
 # your resume. this file path should be relative to you "static" directory
-resume: "files/resume.pdf"
+resume: "files/HimangshuShekharJha.pdf"
 
 # a summary about you
 summary: 'I am a passionate computer science engineer with immense love in exploring the various domains in the stream and use my expertise and knowledge to build innovative and useful solutions.'
