added new photo

--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -23,7 +23,7 @@ summary: 'I am a passionate computer science engineer with immense love in explo
 socialLinks:
 - name: LinkedIn
   icon: "fab fa-linkedin"
-  url: "https://www.linkedin.com/in/himancifer/"
+  url: "https://www.linkedin.com/in/himangshushekharjha/"
 - name: GitHub
   icon: "fab fa-github"
   url: "https://github.com/himangshushekharjha"
